[package]
name = "ruast_qqbot"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "^1.4.0"
config-file = "^0.2.3"
futures = "^0.3.31"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.138"
tokio = { version = "^1", features = ["full"] }
tokio-tungstenite = "^0.26.1"
tungstenite = "^0.26.1"
redis = { version = "^0.28.2", features = ["tokio-comp"] }
uuid = { version = "^1.12.1", features = ["v4"] }
reqwest = { version = "^0.12", features = ["cookies", "json"] }
reqwest-eventsource = "^0.6"
regex = "^1.11.1"
once_cell = "^1.20.2"
rand = "^0.9.0"
